syntax = "proto3";
package playground;
option java_package = "com.playground.grpc.stock";
option java_multiple_files = true;

message StockRequest { string symbol = 1; }
message StockPrice { double price = 1; int64 ts = 2; }

service StockService {
  rpc StreamPrices(StockRequest) returns (stream StockPrice);
}
